# ansible

./: Makefile  inventory  inventory.yaml  pyproject.toml
confs/: bashrc  ssh_config  xinitrc
playbooks/: base_utilities.yaml  conf_repos.yaml  graphics_utils.yaml  nerd_font.yaml  nvim.yaml  programs.yaml  python_deps.yaml  python_utilities.yaml  qtile.yaml  ssh_utilities.yaml
scripts/: conf_repos.sh  installation.sh  python_utils.sh  ssh_utils.sh
