[tool.poetry]
name = "juselara_ansible"
version = "0.1.0"
description = "Ansible config files for my personal enviroment setup."
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">3.8"
ansible = "^5.7.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
